[IOCOM-1210] Add "Create OIDC Client Config" Endpoint (#23)
